[tool.poetry]
name = "data science battle pipeline"
version = "0.1.0"
description = ""
authors = ["Roman Shcherbakov"]

[tool.poetry.dependencies]
python = "^3.8"
jupyter = "^1.0.0"
pandas = "^1.3.4"
shap = "^0.40.0"
catboost = "^1.0.1"
seaborn = "^0.11.2"
pandas-profiling = "^3.1.0"
sweetviz = "^2.1.3"
optuna = "^2.10.0"
mlens = "^0.2.3"
autowoe = "^1.2.5"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
